Adicionando navegação no índice

--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
 </header>
 
 <body>
-<h2>Índice</h2>
+<h2 id="indice">Índice</h2>
 <ol>
-    <li><strong>História da web</strong></li>
+    <li><strong><a href="#number1">História da web</a></strong></li>
     <ul>
         <li>Primeiros computadores</li>
         <li>Como surgiu</li>
         <li>Grandes Nomes</li>
     </ul><br>
-    <li><strong>O que são Clients</strong></li>
+    <li><strong><a href="#number2">O que são Clients</a></strong></li>
     <ul>
         <li>Cliente no linguajar Web</li>
         <li>Navegadores</li>
         <li>Aplicações Web</li>
         <li>Dispositivos móveis</li>
     </ul><br>
-    <li><strong>O que são Servers</strong></li>
+    <li><strong><a href="#number3">O que são Servers</a></strong></li>
     <ul>
         <li>Sobre Servidores</li>
         <li>Hardwares e Softwares em Servidores</li>
         <li>Tipos de Servidores</li>
         <li>Hospedagem de Sites</li>
     </ul><br>
-    <li><strong>Linguagem de Programação</strong></li>
+    <li><strong><a href="#number4">Linguagem de Programação</a></strong></li>
     <ul>
         <li>O que é</li>
         <li>Server-Side</li>
         <li>Client-Side</li>
         <li><abbr title="Hypertext Markup Language">HTML</abbr> não é linguagem de Programação</li>
     </ul><br>
-    <li><strong>Introdução ao HTML na Prática</strong></li>
+    <li><strong><a href="#number5">Introdução ao HTML na Prática</a></strong></li>
     <ul>
         <li>Ferramentas utilizadas</li>
         <li>Inspetor de Elementos</li>
@@ -56,7 +56,7 @@
     </ul>
 </ol>
 
-<h3 id="number1"><u>História da Web</u></h3>
+<h3 id="number1"><u>História da Web</u></h3><a href="#indice">voltar</a>
 <h4>Primeiros Computadores</h4>
 <p>A primeira geração de computadores surgiu em 1944, eles eram enormes ocupavam uma sala inteira e pesavem toneladas. A segunda geração foi entre 1959 a 1965 com o surgimento dos transitores e os computadores ficaram menores e conseguiamos movê-los de uma sala para outra. A terceira geração foi entre 1965 e 1970 com o circuito integrado, sugirndo o transitor, os capacitadores e os resistores.A quarta geração iniciou a partir de 1971 com máquinas menore, o surgimento do Smartphone e do mouse.</p>
 
@@ -79,7 +79,7 @@
 </blockquote></p>
 <p>Continuando<sub>...</sub></p>
 
-<h3 id="number2"><u>O que são Clients</u></h3>
+<h3 id="number2"><u>O que são Clients</u></h3><a href="#indice">voltar</a>
 <h4>Clientes no linguajar Web</h4>
 <p>Quando falamos da internet existe um lado mais próximo do usuário, o usuário atráves do seu dispositivo acessa a internet que através do protocolo HTTP vai até o servidor pega esses dados e reproduz na tela para o usuário. Hoje muito mais que antes, estamos muito preocupados com esse lado, devido aos diversos dispositivos, trazendo vários formatos de telas e tamanhos, temos que trabalhar bem a responsividade e também a compatibilidade com os navegadores, e assim trazermos a informação lá dos servidores e apresentá-las na tela da melhor maneira possível para o usuário.</p>
 
@@ -95,7 +95,7 @@
 <h4>Dispositivos móveis</h4>
 <p>Dispositivos móveis são tecnologias digitais que permitem a mobilidade e o acesso à internet. Pode-se citar como exemplos os smartphones e tablets. Hoje em dia a mior parte de acesso a internet é feita através de um dispositivo móvel.</p>
 
-<h3 id="number3"><u>O que são Servers</u></h3>
+<h3 id="number3"><u>O que são Servers</u></h3><a href="#indice">voltar</a>
 <h4>Sobre Servidores</h4>
 <p>Um servidor é um computador equipado com um ou mais processadores, bancos de memória, portas de comunicação, softwares e, ocasionalmente, algum sistema para armazenamento de dados, como hard disks internos ou memórias SSD. Temos servidores locais, onde só irá acessar o conteúdo pertencendo a rede e temos servidores de internet onde você pode acessar o conteúdo mesmo estando fora da rede.
 </p>
@@ -129,7 +129,7 @@ Existem vários tipos de servidores, entre eles estão:
 <h4>Hospedagem de sites</h4>
 <p>Hospedagem de sites é o processo de usar um servidor para hospedar um site e deixá-lo disponível para qualquer pessoa o acessar. Existem muitos tipos, como, por exemplo, a hospedagem de site compartilhada. Embora muitas provedoras ofereçam pacotes semelhantes, quanto mais popular um site é, mais recursos ele precisa para funcionar com eficiência.</p>
 
-<h3><u>Linguagem de programação</u></h3>
+<h3 id="number4"><u>Linguagem de programação</u></h3><a href="#indice">voltar</a>
 <h4>O que é?</h4>
 <p>Linguagem de Programação é uma linguagem escrita e formal que especifica um conjunto de instruções e regras usadas para gerar programas (software).
 </p>
@@ -157,7 +157,7 @@ Existem vários tipos de servidores, entre eles estão:
 <h4>HTML é linguagem de programação?</h4>
 <p>Não, HTML não é uma linguagem de programação e sim um arquivo de marcação. Os textos são delimitados por nomes que o navegador consegue interpretar e cada um destes delimitadores tem uma função e comportamento específico.</p>
 
-<h3><u>Introdução ao HTML na prática</u></h3>
+<h3 id="number5"><u>Introdução ao HTML na prática</u></h3><a href="#indice">voltar</a>
 <h4>Ferramentas utilizadas</h4>
 <p>Temos vários editores de textos que podemos usar, mas optamos por usar o VS Code. Ao clicar no texto abaixo você será direcionado para o site do VS Code.</p>
 <p><a href="https://code.visualstudio.com/" target="_blank">VS Code</a></p>
